--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -36,8 +36,25 @@ services:
       - SPRING_R2DBC_URL=r2dbc:postgresql://polar-postgres:5432/polardb_order
       - SPRING_FLYWAY_URL=jdbc:postgresql://polar-postgres:5432/polardb_order
 
+  edge-service:
+    depends_on:
+      - polar-redis
+    image: "ghcr.io/kykuk/edge-service"
+    container_name: "edge-service"
+    ports:
+      - 9000:9000
+      - 8000:8000
+    environment:
+      # Buildpacks environment variable to enable debug through a socket on port 8001
+      - BPL_DEBUG_ENABLED=true
+      - BPL_DEBUG_PORT=8000
+      - CATALOG_SERVICE_URI=http://catalog-service:9001
+      - ORDER_SERVICE_URI=http://order-service:9002
+      - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
+      - SPRING_REDIS_HOST=polar-redis
+      
   config-service:
-    image: "config-service:0.0.1-SNAPSHOT"
+    image: "ghcr.io/kykuk/config-service"
     container_name: "config-service"
     ports:
       - 8888:8888
@@ -60,3 +77,10 @@ services:
       - POSTGRES_PASSWORD=password
     volumes:
       - ./postgresql/init.sql:/docker-entrypoint-initdb.d/init.sql
+      
+  polar-redis:
+    image: "redis:7.0"
+    container_name: "polar-redis"
+    ports:
+      - 6379:6379
+      
