--- a/kubernetes/platform/development/services/postgresql.yml
+++ b/kubernetes/platform/development/services/postgresql.yml
@@ -33,8 +33,6 @@ spec:
               value: user
             - name: POSTGRES_PASSWORD
               value: password
-            - name: POSTGRES_DB
-              value: polardb_catalog
           resources:
             requests:
               cpu: 100m
@@ -42,6 +40,9 @@ spec:
             limits:
               cpu: 200m
               memory: 120Mi
+          volumeMounts:
+            - mountPath: /docker-entrypoint-initdb.d
+              name: postgres-config-volume
       volumes:
         - name: postgres-config-volume
           configMap: 
