Change polar-ui version

--- a/kubernetes/platform/development/services/polar-ui.yml
+++ b/kubernetes/platform/development/services/polar-ui.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: polar-ui
-          image: ghcr.io/polarbookshop/polar-ui:v1
+          image: ghcr.io/polarbookshop/polar-ui:latest
           imagePullPolicy: Always
           lifecycle:
             preStop:
