--- a/kubernetes/platform/development/services/polar-ui.yml
+++ b/kubernetes/platform/development/services/polar-ui.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: polar-ui
-          image: ghcr.io/polarbookshop/polar-ui:latest
+          image: ghcr.io/polarbookshop/polar-ui:v1
           imagePullPolicy: Always
           lifecycle:
             preStop:
@@ -26,7 +26,7 @@ spec:
             - containerPort: 9004
           env:
             - name: PORT
-              value: 9004
+              value: "9004"
                        
 ---
 
